--- a/package.json
+++ b/package.json
@@ -13,8 +13,16 @@
   ],
   "author": "Magdiel H.G. <magdielhgra@gmail.com>",
   "license": "MIT",
-  "bin":{
-    "mgl-random": "./bin/global.js"
+  "bin": {
+    "mgl-random": "bin/global.js"
   },
-  "preferGlobal": true
+  "preferGlobal": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MagdielGrande/mgl-random.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MagdielGrande/mgl-random/issues"
+  },
+  "homepage": "https://github.com/MagdielGrande/mgl-random#readme"
 }
